# docs/swagger.json
@@ -84,7 +84,7 @@
         },
         "/api/v1/auth/login": {
             "post": {
-                "description": "Login user and get tokens",
+                "description": "Login user using email or username",
                 "consumes": [
                     "application/json"
                 ],
@@ -188,11 +188,6 @@
         },
         "/api/v1/auth/refresh": {
             "post": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
                 "description": "Get a new access token using a valid refresh token",
                 "consumes": [
                     "application/json"
@@ -204,6 +199,17 @@
                     "Auth"
                 ],
                 "summary": "Refresh access token",
+                "parameters": [
+                    {
+                        "description": "Refresh token Request",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.RefreshTokenRequest"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -669,6 +675,14 @@
                 }
             }
         },
+        "dto.RefreshTokenRequest": {
+            "type": "object",
+            "properties": {
+                "refresh_token": {
+                    "type": "string"
+                }
+            }
+        },
         "dto.RefreshTokenResponse": {
             "type": "object",
             "properties": {
@@ -677,6 +691,9 @@
                 },
                 "expires_in": {
                     "type": "integer"
+                },
+                "refresh_token": {
+                    "type": "string"
                 },
                 "token_type": {
                     "type": "string"
